Change topic id's get param name

--- a/front/view/topic.html
+++ b/front/view/topic.html
@@ -1,4 +1,4 @@
-<body onload="javascript:View.Init((new URL(window.location)).searchParams.get('topic'))">
+<body onload="javascript:View.Init((new URL(window.location)).searchParams.get('id'))">
 	    <!-- Navbar for branding -->
 	    <nav class="navbar navbar-dark">
 	    	<a class="navbar-brand" href="#">Every Logger</a>
